module/core/derive_tools/tests/inc/index_mut/compiletime/struct_unit.stderr
error: IndexMut can be applied only to a structure with one field
 --> tests/inc/index_mut/compiletime/struct_unit.rs:4:1
  |
4 | struct StructUnit;
  | ^^^^^^^^^^^^^^^^^^
